other-vpol/require-pod-priorityclassname/.kyverno-test-exceptions/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-pod-priorityclassname-exceptions
policies:
- ../require-pod-priorityclassname.yaml
resources:
- ../.kyverno-test/resource.yaml
- partial-resources.yaml
exceptions:
- exceptions.yaml
results:
- isValidatingPolicy: true
  kind: Pod
  policy: require-pod-priorityclassname
  resources: [badpod01]
  result: skip
- isValidatingPolicy: true
  kind: Pod
  policy: require-pod-priorityclassname
  resources: [goodpod01]
  result: pass
- isValidatingPolicy: true
  kind: Pod
  policy: require-pod-priorityclassname
  resources: [partial-priority-approved]
  result: pass
- isValidatingPolicy: true
  kind: Pod
  policy: require-pod-priorityclassname
  resources: [other/partial-priority-wrong]
  result: fail
